--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,25 @@ border-bottom に「dotted」を指定して点線にする
     padding: 6px 0;
     margin-left: 20px;
 }
+
+/*-------------------------------------------
+Button
+-------------------------------------------*/
+
+.btn {
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+/*
+「display: inline-block;」でaタグに幅と高さを持たせる。
+paddingでボタンのサイズを調整。
+*/
+
+.btn a {
+    display: inline-block;
+    border: solid 1px #2b2a27;
+    font-size: 0.875rem;
+    padding: 18px 60px;
+    text-decoration: none;
+}
