--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,30 @@ paddingでボタンのサイズを調整。
     padding: 18px 60px;
     text-decoration: none;
 }
+
+/*-------------------------------------------
+Footer
+-------------------------------------------*/
+
+#footer {
+    font-size: 0.75rem;
+    padding: 20px;
+    text-align: center;
+}
+
+/*
+リンクはul、liタグで記述
+SNSのリンク集という、一つの意味をもったリスト群になるので、ul、liタグでグルーピング
+※リストタグを使用しなくても問題ないが、使用した方が検索エンジンに対して
+より適切に意味を伝えることができると考えリストタグを選択しています。
+*/
+
+#footer .sns {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#footer .sns li {
+    margin: 0 10px;
+}
